--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vian's website</title>
     <link rel="stylesheet" href="style.css">
-
-<head>
-<title>Spotify Clone</title>
 </head>
 <body>
   <header class="header">
