--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }">
     <div class="search">
         <input type="text" placeholder="Search...">
-        <button>Search</button>
+        <button>🔍</button>
     </div>
     <div class="notification">
         <button>Notification</button>
